<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>de.heinzenburger</groupId>
        <artifactId>catch-that-cow</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>domain</artifactId>
    <name>1-Domain Layer</name>
    <description>Core business entities and enterprise business rules (Layer 3)</description>

    <dependencies>
        <!-- Layer 3 can depend on Layer 4 (Abstraction) -->
        <dependency>
            <groupId>de.heinzenburger</groupId>
            <artifactId>abstraction</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
